grammars/command/test/corpus/files.txt
============
load project
============
load project
---
(command
  (load
    (project)))


============
save project
============
save project
---
(command
  (save
    (project)))


======================
save project timestamp
======================
save project timestamp
---
(command
  (save
    (project
      (timestamp))))


=================
save project gzip
=================
save project gzip
---
(command
  (save
    (project
      (gzip))))


===========================
save project timestamp,gzip
===========================
save project timestamp,gzip
---
(command
  (save
    (project
      (timestamp)
      (gzip))))


===========================
save project gzip,timestamp
===========================
save project gzip,timestamp
---
(command
  (save
    (project
      (gzip)
      (timestamp))))


===========
load script
===========
load script
---
(command
  (load
    (script)))


=====================
save script timestamp
=====================
save script timestamp
---
(command
  (save
    (script
      (timestamp))))


================
export panel svg
================
export panel svg
---
(command
  (export
    (panel
      (svg))))


======================
export panel svg light
======================
export panel svg light
---
(command
  (export
    (panel
      (svg
        (light)))))


=====================
export panel svg dark
=====================
export panel svg dark
---
(command
  (export
    (panel
      (svg
        (dark)))))


===============
export panel .h
===============
export panel .h
---
(command
  (export
    (panel
      (header))))
