grammars/command/test/corpus/input.txt
========================
new input "e" @10mm,10mm
========================
new input "e" @10mm,10mm
---
(command
  (new
    (input
      (name)
      (absolute
        (x)
        (y)))))


======================
new input "e" left,top
======================
new input "e" left,top
---
(command
  (new
    (input
      (name)
      (geometry
        (x
          (reference))
        (y
          (reference))))))


==================================
new input "e" left+4.5mm,top+4.5mm
==================================
new input "e" left+4.5mm,top+4.5mm
---
(command
  (new
    (input
      (name)
      (geometry
        (x
          (reference)
          (offset))
        (y
          (reference)
          (offset))))))
